--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "Isaac Pollert Ph.D."
 ---
 
 ```{r, out.width="100%", echo=FALSE}
-knitr::include_graphics("cover.JPG")
+knitr::include_graphics("IsaacPollert.JPG")
 ```
 
 BIO
