--- a/index.Rmd
+++ b/index.Rmd
@@ -1,4 +1,10 @@
 ---
+output: html_document
+---
+```{js, echo = FALSE}
+document.title = "Isaac Pollert"
+```
+---
 title: "Isaac Pollert Ph.D."
 ---
 
